# mara-catalog

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
.github/workflows/: build.yaml
mara_catalog/: __init__.py  _deltalake.py  _pyarrow.py  catalog.py  cli.py  config.py  connect.py  ddl.py  discover.py  export.py  formats.py  schema.py  shell.py  table.py
mara_catalog/integrations/: dbt.py
tests/: docker-compose.yml  local_config.py  local_config.py.example
tests/example_datalake/: README.md
