[metadata]
name = mara-catalog
version = attr: mara_catalog.__version__
url = https://github.com/mara/mara-catalog
description = A python module for connecting data lakes and lakehouses to database engines.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_catalog
python_requires = >= 3.9
install_requires =
    mara-db>=4.9.2
    mara-storage>=1.1.0
    pyarrow

[options.package_data]
mara_catalog = **/*.py

[options.extras_require]
test =
    pytest
    pytest-docker
    pytest-dependency
    mara_app>=2.3.0
    mara-db[postgres,mssql]>=4.9.2
    mara-pipelines>=3.5.0

[options.entry_points]
mara.commands =
    catalog = mara_catalog.cli:mara_catalog
